fixed font-color for what's-this-popups so that they're readable
git-svn-id: https://lmms.svn.sf.net/svnroot/lmms/trunk/lmms@1284 0778d3d1-df1d-0410-868b-ea421aaaa00d

--- a/data/themes/default/style.css
+++ b/data/themes/default/style.css
@@ -1,5 +1,9 @@
 /* LMMS style sheet */
 
+QWhatsThat {
+	color: black;
+}
+
 QMdiArea {
 	background-image: url(resources:background_artwork.png);
 }
